delete: 将orm移出为独立的crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,5 @@ hyper = "0.9.13"
 regex = "*"
 rustc-serialize = "0.3.21"
 
-[dependencies.mysql]
-version = "*"
-default-features = false
-features = ["pipe"]
+[dependencies.orm]
+path = "../orm"
