--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ html5ever = "*"
 hyper = "0.9.13"
 regex = "*"
 rustc-serialize = "0.3.21"
+chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
 
 [dependencies.orm]
 path = "../orm"
